replaced LinkedList with ArrayList