@@ -7,14 +7,14 @@ import org.junit.Test;
 import services.crawlers.WebCrawler;
 
 import java.io.IOException;
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 import static org.junit.Assert.*;
 
 
 public class WebCrawlerTest {
-    private static final String XPATH_CONFIG_FILE_PATH = "src/main/resources/properties/xpath.properties";
-    private static final String ASSERTION_PAGE_LINKS_PATH = "src/test/resources/properties/assertion.properties";
+    private static final String XPATH_PROPERTIES_PATH = "src/main/resources/properties/xpath.properties";
+    private static final String ASSERTION_PROPERTIES_PATH = "src/test/resources/properties/assertion.properties";
     private static final String MOCK_HOME_PAGE_FILEPATH =
             "file:///" + System.getProperty("user.dir") + "/src/test/resources/pages/homePage.html";
     private static final String MOCK_ARTIST_PAGE_LETTER_O =
@@ -26,18 +26,18 @@ public class WebCrawlerTest {
 
     @Test
     public void extractLinksFromOnePageTest() throws IOException, ConfigurationException {
-        Configuration assertionConfig = getConfig(ASSERTION_PAGE_LINKS_PATH);
-        Configuration xPathConfig = getConfig(XPATH_CONFIG_FILE_PATH);
+        Configuration assertionConfig = getConfig(ASSERTION_PROPERTIES_PATH);
+        Configuration xPathConfig = getConfig(XPATH_PROPERTIES_PATH);
 
-        LinkedList<String> extractedLinks = crawler(MOCK_HOME_PAGE_FILEPATH).extractLinks(
+        ArrayList<String> extractedLinks = crawler(MOCK_HOME_PAGE_FILEPATH).extractLinks(
                 xPathConfig.getString("xpath.alphabeticalLinks"));
 
         assertEquals(extractedLinks.size(), 29);
         assertEquals(
-                extractedLinks.getFirst(),
+                extractedLinks.get(0),
                 assertionConfig.getString("assertion.firstPageSingleExtractionTest"));
         assertEquals(
-                extractedLinks.getLast(),
+                extractedLinks.get(28),
                 assertionConfig.getString("assertion.lastPageSingleExtractionTest"));
         assertEquals(
                 extractedLinks.get(17),
@@ -46,31 +46,31 @@ public class WebCrawlerTest {
 
     @Test
     public void extractLinksFromMultiplePagesTest() throws IOException, ConfigurationException {
-        Configuration xPathConfig = getConfig(XPATH_CONFIG_FILE_PATH);
-        Configuration assertionConfig = getConfig(ASSERTION_PAGE_LINKS_PATH);
+        Configuration xPathConfig = getConfig(XPATH_PROPERTIES_PATH);
+        Configuration assertionConfig = getConfig(ASSERTION_PROPERTIES_PATH);
 
-        LinkedList<String> extractedLinks = new LinkedList<>();
+        ArrayList<String> extractedLinks = new ArrayList<>();
         String[] pages = {MOCK_ARTIST_PAGE_LETTER_O, MOCK_ARTIST_PAGE_LETTER_G};
 
         for (String page : pages) {
-            LinkedList<String> links = crawler(page).extractLinks(xPathConfig.getString("xpath.authorLinks"));
+            ArrayList<String> links = crawler(page).extractLinks(xPathConfig.getString("xpath.authorLinks"));
 
             extractedLinks.addAll(links);
         }
 
-        assertEquals(extractedLinks.getClass(), LinkedList.class);
-        assertEquals(extractedLinks.getFirst().getClass(), String.class);
+        assertEquals(extractedLinks.getClass(), ArrayList.class);
+        assertEquals(extractedLinks.get(0).getClass(), String.class);
         assertEquals(extractedLinks.size(), 48);
-        assertEquals(extractedLinks.getFirst(),
+        assertEquals(extractedLinks.get(0),
                 assertionConfig.getString("assertion.firstPageMultipleExtractionTest"));
-        assertEquals(extractedLinks.getLast(),
+        assertEquals(extractedLinks.get(47),
                 assertionConfig.getString("assertion.lastPageMultipleExtractionTest"));
     }
 
     @Test
     public void extractContentTest() throws ConfigurationException, IOException {
-        Configuration xPathConfig = getConfig(XPATH_CONFIG_FILE_PATH);
-        Configuration assertionConfig = getConfig(ASSERTION_PAGE_LINKS_PATH);
+        Configuration xPathConfig = getConfig(XPATH_PROPERTIES_PATH);
+        Configuration assertionConfig = getConfig(ASSERTION_PROPERTIES_PATH);
 
         String text = crawler(MOCK_LYRICS_PAGE).extractContent(xPathConfig.getString("xpath.lyricsExample"));
 
